@@ -8,6 +8,8 @@ This file documents the revision history for Phonebook.
         - Remove vCard view; instead use a new TT wrapper
         - Improve URL generation in Phonebook::Controller::Search
         - Redirect from /people/ and /units/ to /
+        - Refactor old application redirect handling into
+          Phonebook::Controller::People
 
 0.17  Wed Apr  5 18:03:04 EDT 2006
         - Refactor organization name to configuration file
